--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,5 @@
 @import './blocks/header';
 @import './blocks/header-hero';
 @import './blocks/header-slider';
+@import './blocks/reasons';
+@import './blocks/benefits';
