--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -45,3 +45,15 @@ body {
         justify-content: center;
     }
 }
+
+.block-heading {
+    font-size: 64px;
+    line-height: 120%;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+.block-paragraph {
+    font-size: 24px;
+    line-height: 120%;  
+}
+
