--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -2,4 +2,5 @@
     --main-font-color: #000;
     --accent-color: #0091d2;
     --white-color: #fff;
+    --light-blue-background: rgba(0, 145, 210, 0.1);
 }
