second day of work

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -3,4 +3,7 @@
     --accent-color: #0091d2;
     --white-color: #fff;
     --light-blue-background: rgba(0, 145, 210, 0.1);
+    --timer-color: #177b63;
+    --grey-color: #f6f6f6;
+    --header-slider-border: #f1f1f1;
 }
