--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,8 @@
 @import './blocks/header-slider';
 @import './blocks/reasons';
 @import './blocks/benefits';
+@import './blocks/steps';
+@import './blocks/reviews';
+@import './blocks/slider-reviews';
+@import './blocks/life';
+@import './blocks/offer';
