--- a/scss/blocks/_header-slider.scss
+++ b/scss/blocks/_header-slider.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 144px;
+
+    margin-bottom: 80px;
 }
 
 .header__slider-description__heading {
@@ -18,4 +20,35 @@
 
     
     max-width: 765px;
+}
+.header__slider-content {
+    text-align: start;
+
+    border: 1px solid var(--header-slider-border);
+    border-radius: 30px;
+
+    padding-bottom: 39px;
+    padding-left: 24px;
+
+    max-height: 517px;
+}
+.header__slider-content__list {
+    display: grid;
+    gap: 16px;
+}
+.header__slider-content__list-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    font-size: 18px;
+}
+.header__slider-img {
+    margin-bottom: 24px;
+}
+.header__slider-content__heading {
+    font-weight: 700;
+    font-size: 32px;
+
+    margin-bottom: 16px;
 }
